--- a/css/hogwarts_legacy.css
+++ b/css/hogwarts_legacy.css
@@ -51,8 +51,18 @@ header{
 
 /*============================================모바일메뉴==============================================*/
 
+
 .mobile-menu.active{
     display: block;
+    animation: m-menu .5s forwards;
+}
+.mobile-menu.off{
+    animation: m-menu2 .5s forwards;
+}
+
+@keyframes m-menu{
+    0%{transform: scale(1.2); opacity: 0;}
+    100%{transform: scale(1); opacity: 1;}
 }
 .mobile-menu{
     position: fixed;
@@ -76,7 +86,13 @@ header{
     border-image-width: 20px;
     border-style: solid;
     padding: 1rem;
+
 }
+@keyframes m-menu2{
+    0%{transform: scale(1); opacity: 1; }
+    100%{transform: scale(1.2); opacity: 0;}
+}
+
 .mobile-menu > button{
     background-color: transparent;
     position: absolute;
@@ -84,13 +100,22 @@ header{
     filter: invert(57%) sepia(52%) saturate(396%) hue-rotate(2deg) brightness(110%) contrast(87%);
     right: 1.5rem;
     top: 1.7rem;
+    cursor: pointer;
 }
-
-.mobile-menu > a > img{
-    margin-right: 50px;
+.mobile-menu > button:hover > svg{
+    transform: scale(.8);
+    transition: .3s;
+}
+.mobile-menu > a {
+    width: auto; height: auto;
     margin-top: 6.7rem;
     margin-bottom: 4rem;
+    margin-right: 50px;
     position: relative;
+    display: flex;
+    justify-content: flex-end;
+}
+.mobile-menu > a > img{
     width: 260px;
 }
 .mm-menu{
@@ -134,7 +159,7 @@ header{
     margin-bottom: 20px;
 }
 .mm-bottom{
-    width: 410px; height: 100%;
+    height: 100%;
     margin-right: 50px;
     display: flex;
     flex-direction: column;
@@ -206,17 +231,21 @@ header{
 .corner-main > img{
     width: 22vw;
 }
-.mobile-play > img{
-    width: 140px; height: 140px;
+.mobile-play{
     position: absolute;
-    top: 35%; left: 40%;
+    width: 140px; height: 140px;
+    top: 37%; left: 35%;
+}
+.mobile-play > img{
+    width: 100%; height: 100%;
+    position: absolute;
     transition: transform .4s cubic-bezier(.48,0,.48,1);
     filter: drop-shadow(3px 3px 3px rgba(0,0,0,0.7));
 }
 .mobile-play > img:nth-of-type(5){
-    width: 44px; height: auto;
+    width: 30%; height: auto;
     margin-left: 7px;
-    top: 45%; left: 47%;
+    top: 35%; left: 34%;
 }
 .mobile-play > img:nth-of-type(1){
     opacity: 0;
@@ -270,6 +299,9 @@ header{
     display: flex;
     flex-direction: column;
     align-items: center;
+    opacity: 0;
+}
+.sub-logo.active{
     animation: logo-ani 2s forwards;
 }
 @keyframes logo-ani{
@@ -298,6 +330,7 @@ header{
 .card-01{
     width: 90%;
     padding: 1.5rem;
+    max-width: 500px;
 }
 .card-01 > div{
     /* background-image: url(../img/main/game-info-frame-a.webp); */
@@ -314,22 +347,46 @@ header{
 .card-01 > div > img:nth-of-type(1){
     position: static;
     width:100%;
+    opacity: 0
 }
+.card-01.active > div > img:nth-of-type(1){
+    animation: logo-ani 1s .3s forwards;
+}
+@keyframes logo-ani{
+    0%{opacity: 0%; transform: scale(0.8);}
+    100%{opacity: 1;}
+}
+
 .card-01 > div > img:nth-of-type(2){
     clip-path: polygon(0 25%,0 75%,50% 100%,100% 75%,100% 25%,50% 0); 
     width: 83%; height: auto;
     top: 13.2%; left: 8.3%;
+    opacity: 0
 }
+.card-01.active > div > img:nth-of-type(2){
+    animation: logo-ani .8s .7s forwards;
+}
+
 .card-01 > div > img:nth-of-type(3){
     right: 10.5%; top: 6.2%;
     width: 16%;
     vertical-align: middle;
+    opacity: 0
 }
+.card-01.active > div > img:nth-of-type(3){
+    animation: logo-ani .7s .9s forwards;
+}
+
 .card-01 > div > img:nth-of-type(4){
     bottom: 6.5%; left: 9.8%;
     width: 16%;
     vertical-align: middle;
+    opacity: 0
 }
+.card-01.active > div > img:nth-of-type(4){
+    animation: logo-ani .7s 1.1s forwards;
+}
+
 .card-01 > figcaption{
     padding: 1rem 1rem 0;
     text-align: center;
@@ -337,12 +394,20 @@ header{
     font-size: .9rem;
     font-weight: 400;
     line-height: 1.4;
+    opacity: 0;
 }
 .card-01 > figcaption > h3{
     font-size: 1.575rem;
     font-weight: 400;
     line-height: 1.2;
     margin-bottom: .5rem;
+}
+.card-01.active > figcaption{
+    animation: figcaption 1s 1.5s forwards;
+}
+@keyframes figcaption{
+    0%{opacity: 0; transform: translateY(30%);}
+    100%{opacity: 1; transform: translateY(0);}
 }
 
 
@@ -868,6 +933,8 @@ footer{
         display: flex;
         flex-direction: column;
         align-items: center;
+    }
+    .sub-logo.active{
         animation: logo-ani 2s forwards;
     }
     @keyframes logo-ani{
