--- a/css/legacy_FAQ.css
+++ b/css/legacy_FAQ.css
@@ -1,5 +1,448 @@
 @import url(./common.css);
 
+
+header{
+    background-image: url(../img/main/mobile-nav-bg.jpg);
+    background-size: cover;
+    width: auto;
+    height: 60px;
+}
+    
+.link{ display: none; }
+.sns{ display: none; }
+
+.mobile-header{
+    background-image: url(../img/main/mobile-nav-bg.jpg);
+    background-size: cover;
+    height: 60px; width: 100%;
+    display: flex;
+    position: fixed;
+    z-index: 5;
+    justify-content: space-between;
+}
+.mobile-header > a{
+    padding-left: 8px;
+}
+.mobile-header > a > img{
+    width: 150px; height: auto;
+    position: relative;
+    top: 2px;
+}
+#buger{
+    width: 55px; height: 52px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    margin-top: 2px;
+}
+#buger > span{
+    display: block;
+    width: 30px; height: 2px;
+    background-color: #b69451;
+    border-radius: 1px;
+}
+#buger > span:nth-of-type(2){
+    margin: 4px 0;
+}
+
+/*============================================모바일메뉴==============================================*/
+
+
+.mobile-menu.active{
+    display: block;
+    animation: m-menu .5s forwards;
+}
+.mobile-menu.off{
+    animation: m-menu2 .5s forwards;
+}
+
+@keyframes m-menu{
+    0%{transform: scale(1.2); opacity: 0;}
+    100%{transform: scale(1); opacity: 1;}
+}
+@keyframes m-menu2{
+    0%{transform: scale(1); opacity: 1; }
+    100%{transform: scale(1.2); opacity: 0;}
+}
+
+.mobile-menu{
+    position: fixed;
+    left: 0; top: 0;
+    z-index: 9;
+    background-image: url(../img/main/mobile-menu-bg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%; height: 100%;
+    padding: 6rem 0;
+    width: 100%; height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: center;
+    display: none;
+    
+    border-image-source: url(https://cdn-hogwartslegacy.warnerbrosgames.com/static/square-border-frame.png);
+    border-image-repeat: stretch stretch;
+    border-image-slice: 44;
+    border-image-width: 20px;
+    border-style: solid;
+    padding: 1rem;
+}
+
+.mobile-menu > button{
+    background-color: transparent;
+    position: absolute;
+    border: 0;
+    filter: invert(57%) sepia(52%) saturate(396%) hue-rotate(2deg) brightness(110%) contrast(87%);
+    right: 1.5rem;
+    top: 1.7rem;
+    cursor: pointer;
+}
+.mobile-menu > button:hover > svg{
+    transform: scale(.8);
+    transition: .3s;
+}
+
+.mobile-menu > a {
+    width: auto; height: auto;
+    margin-top: 6.7rem;
+    margin-bottom: 4rem;
+    margin-right: 50px;
+    position: relative;
+    display: flex;
+    justify-content: flex-end;
+}
+.mobile-menu > a > img{
+    width: 260px;
+}
+.mm-menu{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    margin-bottom: 1.75rem;
+    width: 100%;
+}
+.mm-menu > li{
+    font-size: 1.4rem;
+    line-height: 1.1;
+    margin: 0 0 1rem;
+    padding-right: 50px;
+    position: relative;
+    text-align: right;
+}
+.mm-menu > li:nth-of-type(5) > a{
+    color: #b69451;
+}
+.mm-menu > li:nth-of-type(7){
+    background-image: url(../img/main/gold-button-bg.jpg);
+    background-size: cover;
+    border-radius: 90px;
+    height: 50px;
+    display: inline-block;
+    padding: 0.7rem 2rem 0.75rem;
+    margin-top: 12px;
+    right: 50px;
+    color: white;
+}
+.mm-menu > p{
+    font-family: serif;
+    font-weight: 400;
+    line-height: 1.1;
+    font-size: .8rem;
+    margin-top: -10px;
+    width: 100%;
+    text-align: right;
+    margin-right: 50px;
+    margin-bottom: 20px;
+}
+.mm-bottom{
+    height: 100%;
+    margin-right: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+.mobile-sns{
+    display: flex;
+    width: 200px; height: auto;
+    justify-content: space-between;
+    margin-bottom: 40px;
+}
+.mobile-sns > a > svg{
+    width: 30px; height: 30px;
+}
+.mm-global{
+    width: 122px;
+    display: flex;
+    font-size: 1.25rem;
+    justify-content: space-around;
+}
+.mm-global > a > svg{
+    width: 20px; height: auto;
+    filter: invert(89%) sepia(88%) saturate(659%) hue-rotate(138deg) brightness(305%) contrast(102%);
+}
+    /* =============================헤더============================ */
+    
+    main{
+        position: relative;
+        background-image: url(../img/media/bg.webp);
+        background-size: 100%;
+        background-repeat: no-repeat;
+        background-position: top;
+        width: 100%; height: auto;
+        background-color: #171e1d;
+        padding: 0;
+    }
+    main svg{
+        width: 2vw;
+        fill: #ffd075;
+    }
+    .navi::before{
+        content: "";
+        background: linear-gradient(0deg,transparent,#000);
+        height: 15vw;
+        position: absolute;
+        width: 100%;
+        top: 0; left: 0;
+        z-index: -2;
+    }
+    .navi{
+        display: flex;
+        text-align: center;
+        align-items: center;
+        position: relative;
+        width: 100%; height: 4vw;
+        justify-content: space-between;
+        font-size: 1vw;
+        z-index: 2;
+        background: linear-gradient(0deg,transparent,#000);
+    }
+    .navi > a{display: none;}
+    .nav-left{display: none;}
+    .nav-right{display: none;}
+    
+    .main-bar{
+        position: absolute;
+        top: 0; left: 0;
+        z-index: 3;
+        display: flex;
+        width: 100%; height: auto;
+        justify-content: space-between;
+        
+    }
+    .main-bar > img{
+        width: 50vw; height: 100%;
+        margin: 0;
+    }
+    .corner-main{
+        position: absolute;
+        top: 2px; left: 0;
+        z-index: 3;
+        display: flex;
+        width: 100%; height: auto;
+        justify-content: space-between;
+    }
+    .corner-main > img{
+        width: 22vw;
+        margin: 0;
+    }
+    /* =============================네비메뉴====================================== */
+    
+    .media-title{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 5%;
+    }
+    .media-title > img:nth-of-type(1){
+        margin-bottom: 1rem;
+        height: 50px; width: auto;
+    }
+    .media-title > img:nth-of-type(2){
+        margin-top: 1rem;
+        height: 35px; width: auto;
+    }
+    
+    .main{
+        margin: 60px 30px 0;
+        max-width: 800px;
+        text-align: center;
+        position: relative;
+    }
+    .qna > p:nth-of-type(1){
+        font-family: serif;
+        margin-bottom: 10px;
+        font-size: 1rem;
+        color: white;
+    }
+    .qna > p:nth-of-type(2){
+        width: 100%;
+        color: #c3b59f;
+        font-size: .75rem;
+    }
+    main img{
+        width: 150px; height: auto;
+        display: block;
+        margin: 20px auto;
+    }
+    
+    .main-top::after{
+        content: "";
+        background: linear-gradient(180deg,transparent,#000);
+        height: 280px; width: 100%;
+        position: absolute;
+        bottom: -2vw; left: 0;
+    }
+    /*==========================================풋터==================================*/
+    footer{
+        background: #000;
+        display: flex;
+        padding-top: 200px;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        position: relative;
+    }
+    footer > a{
+        border: 1px solid gray;
+        border-radius: 30px;
+        width: 95px; height: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        margin: 0px 0 70px;
+        text-align: center;
+        font-size: 11px;
+        padding: 5px;
+    }
+    footer > a > svg{
+        height: 50%; width: 50%;
+    }
+    .game-logo-1{
+        width: auto; height: auto;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        align-self: center;
+        flex-wrap: wrap;
+        max-width: 100vw;
+    }
+    .game-logo-1 > svg:nth-of-type(1){
+        height: 75px; width: 54px;
+        margin: 0 28px 30px;
+    }
+    .game-logo-1 > img{
+        height: 26px; width: auto;
+        margin: 0 28px 30px;
+    }
+    .game-logo-1 > svg:nth-of-type(2){
+        height: 60px; width: 80px;
+        margin: 0 28px 30px;
+    }
+    .game-logo-1 > svg:nth-of-type(3){
+        height: 29px; width: 84px;
+        margin: 0 28px 30px;
+    }
+    .game-logo-2{
+        width: 1110; height: 87;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        align-self: center;
+        flex-wrap: wrap;
+        flex-direction: row;
+        transform: scale3d(.7,.7,1);
+    }
+    @media(min-width: 1200px){footer > div:nth-of-type(2){width: 930; height: 160;}}
+    
+    .game-logo-2 > svg:nth-of-type(1){
+        height: 23px; width: 110px;
+        margin: 0 28px 30px;
+    }
+    .game-logo-2 > svg:nth-of-type(2){
+        height: 23px; width: 110px;
+        margin: 0 28px 30px;
+    }
+    .game-logo-2 > svg:nth-of-type(3){
+        height: 27px; width: auto;
+        margin: 0 28px 30px;
+    }
+    .game-logo-2 > svg:nth-of-type(4){
+        height: 27px; width: auto;
+        margin: 0 28px 30px;
+    }
+    .game-logo-2 > svg:nth-of-type(5){
+        height: auto; width: 56px;
+        margin: 0 28px 30px;
+    }
+    .game-logo-2 > svg:nth-of-type(6){
+        height: 43px; width: 28px;
+        margin: 0 28px 30px;
+    }
+    .legal-rating{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+    .legal{
+        width: 380px;
+        margin: 10px 10px 20px 0;
+    }
+    .legal-2{
+        display: flex;
+        align-items: center;
+    
+    }
+    .legal-2> svg{
+        width: 40px; height: auto;
+        margin: 0 10px;
+    }
+    .legal p{
+        font-size: .5625rem;
+        color: gray;
+    }
+    .legal >p{
+        padding-left: 11px;
+        margin-bottom: 1rem;
+    }
+    .rating > svg{
+        height: auto;
+        width: 74px;
+    }
+    
+    .clause{
+        height: 20px; width: 370px;
+        font-size: .625rem;
+        font-weight: 400;
+        line-height: 1.4;
+        display: flex;
+        color: gray;
+        opacity: .7;
+        justify-content: space-evenly;
+    }
+    
+    .corner-bottom{
+        position: absolute;
+        display: flex;
+        width: 100%; height: auto;
+        justify-content: space-between;
+        bottom: 0;
+    }
+    .corner-bottom > img{
+        width: 10vw;
+    }
+    
+
+
+
+/* ======================================992====================================== */
+/* ======================================992====================================== */
+
+@media(min-width:992px){
+
 header{
     width: auto;
     height: 40px;
@@ -61,9 +504,8 @@ header{
 .sns > p > a:nth-of-type(4) > img:hover{
     filter: invert(79%) sepia(61%) saturate(3499%) hue-rotate(177deg) brightness(112%) contrast(98%);
 }
-.mobile-header{
-    display: none;
-}
+.mobile-header{display: none;}
+.mobile-menu{display: none;}
 
 /* =============================헤더============================ */
 
@@ -105,6 +547,7 @@ main svg{
     position: absolute;
     left: 41%; top: 5%;
     display: block;
+    z-index: 10;
 }
 .navi > a > img{
     width: 18vw; height: auto;
@@ -169,6 +612,8 @@ main svg{
     left: 62%;
     bottom: 0.35vw;
     white-space: nowrap;
+    width: 35%;
+    overflow: hidden;
 }
 .nav-right svg{vertical-align: middle;}
 .nav-right::before{
@@ -212,6 +657,7 @@ main svg{
     width: 10vw;
     margin: 0;
 }
+
 /* =============================네비메뉴====================================== */
 
 .media-title{
@@ -394,4 +840,6 @@ footer > a > svg{
 }
 .corner-bottom > img{
     width: 10vw;
+}
+
 }
