--- a/css/hogwarts_legacy.css
+++ b/css/hogwarts_legacy.css
@@ -239,6 +239,7 @@ header{
     width: 140px; height: 140px;
     top: 50%; left: 50%;
     transform: translate(-50%, -50%);
+    cursor: pointer;
 }
 .mobile-play > img{
     width: 100%; height: 100%;
@@ -339,7 +340,7 @@ header{
 }
 .bottom-main::before{
     content: "";
-    height: 100px; width: 100vw;
+    height: 100px; width: 96vw;
     position: absolute;
     left: -30px; top: -5px;
     display: inline-block;
@@ -560,7 +561,7 @@ header{
     content: "";
     background: linear-gradient(180deg,transparent,#000);
     height: 280px;
-    width: 100vw;
+    width: 96vw;
     position: absolute;
     z-index: -1;
     bottom: -8%;
@@ -670,7 +671,7 @@ footer{
 }
 
 .clause{
-    height: 20px; width: 100vw;
+    height: 20px; width: 100%;
     font-size: .625rem;
     font-weight: 400;
     line-height: 1.4;
@@ -908,7 +909,7 @@ footer{
     #little{
         position: absolute;
         font-size: .7vw;
-        left: 62%;
+        right: 3%;
         bottom: 0.35vw;
         white-space: nowrap;
     }
