--- a/css/legacy_FAQ.css
+++ b/css/legacy_FAQ.css
@@ -233,7 +233,7 @@ header{
         
     }
     .main-bar > img{
-        width: 50vw; height: 100%;
+        width: 50%; height: 100%;
         margin: 0;
     }
     .corner-main{
